2007-04-21  Zoltan Varga  <vargaz@gmail.com>

	* coverage.c (output_method): Escape classname as well.

Thu Nov 30 17:36:43 CET 2006 Paolo Molaro <lupus@ximian.com>

	* gui/gtk/SourceWindow.cs: work around Gtk bug.
	* coverage.c: disable domain unload for now and make sure
	methods names are encoded correctly in the XML file.

Thu Nov 30 12:15:03 CET 2006 Paolo Molaro <lupus@ximian.com>

	* Ship a Cecil binary in the source tarball. Added a
	configure option to specify a Cecil binary.
	* style.xsl: fixed mangling of hrefs.

Mon Nov 27 13:47:24 CET 2006 Paolo Molaro <lupus@ximian.com>

	* UI updates. Removed unused dependency on gnome-sharp.
	Upped version.

Fri Nov 24 20:09:05 CET 2006 Paolo Molaro <lupus@ximian.com>

	* Fixes and manpage added.

Fri Nov 24 19:41:04 CET 2006 Paolo Molaro <lupus@ximian.com>

	* XmlExporter.cs: deal with nested types by changing slashes
	into dots in filenames.

Fri Nov 24 17:01:27 CET 2006 Paolo Molaro <lupus@ximian.com>

	* Makefile, configure: added configure script and install/dist target.
	* coverage.c: updated to not require access to mono internals.

Fri Nov 24 16:25:51 CET 2006 Paolo Molaro <lupus@ximian.com>

	* CoverageModel.cs: updated to use Cecil to load assemblies
	so the tool can be used with both 1.0 and 2.0 runtimes.
	Made it handle the conversion between the different name
	conventions for nested types.
	* coverage.c: include the assembly filename in the output so
	we don't have to try and emulate the runtime assembly load
	process and we can find the used assembly right away.

Fri Nov 24 16:23:38 CET 2006 Paolo Molaro <lupus@ximian.com>

	* gui/gtk/*.cs: usability improvements and changes to make
	it run with more recent versions of glade-sharp.

2006-04-04  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* CoverageModel.cs: Removed redundant for loops
	in GetSourceRangeFor.

	* Makefile: Use -debug instead of -g.

2006-04-04  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* Makefile: Fixed clean target.